# Vexxus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup.bat  setup.sh  vcpkg.json
.github/workflows/: ci-build-test.yml
Assets/Metadata/: shaders.json
Assets/Shaders/: Sprite.vert
Cocoa/: CMakeLists.txt
Cocoa.Tests/: CMakeLists.txt
Cocoa.Tests/include/Helpers/: TestFileReader.hpp
Cocoa.Tests/include/Stubs/Graphics/: StubGraphicsDevice.hpp  StubShader.hpp  StubTexture2D.hpp
Cocoa.Tests/src/Assets/: AssetLoaderTests.cpp  AssetManagerTests.cpp  FilesystemAssetSourceTests.cpp  JsonDatabaseTests.cpp  ResourceLoaderTests.cpp
Cocoa.Tests/src/Graphics/: MaterialManagerTests.cpp  ShaderManagerTests.cpp  TextureManagerTests.cpp
Cocoa.Tests/src/Scenes/: SceneManagerTests.cpp
Cocoa.Tests/src/Stubs/Graphics/: StubGraphicsDevice.cpp  StubShader.cpp  StubTexture2D.cpp
Cocoa.Tests/src/TestData/Metadata/: badmaterials.json  badshaders.json  materials.json  shaders.json
Cocoa.Tests/src/TestData/MissingShaders/: textures.json
Cocoa.Tests/src/TestData/Resources/Texts/: sample.txt  sample2.txt
Cocoa/include/Assets/: AssetDatabase.hpp  AssetLoader.hpp  AssetManager.hpp  AssetPathProvider.hpp  AssetSource.hpp  FilesystemAssetSource.hpp  JsonAssetDatabase.hpp  PathProvider.hpp  ResourceLoader.hpp  ShaderSource.hpp
Cocoa/include/Core/: Application.hpp  Memory.hpp
Cocoa/include/Graphics/: BufferElement.hpp  BufferLayout.hpp  GraphicsDevice.hpp  GraphicsHandles.hpp  IndexBuffer.hpp  Material.hpp  MaterialManager.hpp  Renderer2D.hpp  Shader.hpp  ShaderManager.hpp  Texture2D.hpp  TextureManager.hpp  TextureSpec.hpp  VertexArray.hpp  VertexBuffer.hpp
Cocoa/include/Scenes/: Scene.hpp  SceneManager.hpp
Cocoa/include/Scenes/Components/: Renderable2DComponent.hpp
Cocoa/include/Scenes/ECS/: ComponentStorage.hpp  View.hpp  World.hpp
Cocoa/include/Scenes/Systems/: CameraSystem.hpp  CollisionSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  System.hpp
Cocoa/resources/metadata/: materials.json  shaders.json  textures.json
Cocoa/resources/shaders/: sprite_default.frag
Cocoa/src/Assets/: AssetLoader.cpp  AssetManager.cpp  AssetPathProvider.cpp  FilesystemAssetSource.cpp  JsonAssetDatabase.cpp  ResourceLoader.cpp
Cocoa/src/Core/: Application.cpp
Cocoa/src/Graphics/: BufferLayout.cpp  MaterialManager.cpp  Renderer2D.cpp  ShaderManager.cpp  TextureManager.cpp
Cocoa/src/Graphics/OpenGL/: OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture2D.cpp  OpenGLTexture2D.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
Cocoa/src/Scenes/: SceneManager.cpp
Cocoa/src/Scenes/ECS/: World.cpp
Cocoa/src/Scenes/Systems/: CollisionSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
Sandbox/: CMakeLists.txt
Sandbox/resources/metadata/: materials.json  textures.json
VexEngine/: CMakeLists.txt
VexEngine.Tests/: CMakeLists.txt
VexEngine.Tests/src/Chronos/: FrameClockTests.cpp
VexEngine.Tests/src/Graphics/: GraphicsFactoryTests.cpp
VexEngine.Tests/src/Scenes/: SceneManagerTests.cpp
VexEngine/include/: Application.hpp
VexEngine/include/Assets/: Asset.hpp  AssetManager.hpp  AssetPathProvider.hpp  IPathProvider.hpp  ImageLoader.hpp
VexEngine/include/Chronos/: FrameClock.hpp
VexEngine/include/Core/: Application.hpp
VexEngine/include/Core/Components/: CameraComponent.hpp  CollisionComponent.hpp  RenderableComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
VexEngine/include/Core/ECS/: ComponentStorage.hpp  ComponentType.hpp  Entity.hpp  View.hpp  World.hpp
VexEngine/include/Core/Systems/: CameraSystem.hpp  CollisionSystem.hpp  ISystem.hpp  MovementSystem.hpp  RenderSystem.hpp
VexEngine/include/Graphics/: GraphicsFactory.hpp  IGraphicsDevice.hpp  IRenderer.hpp  IWindow.hpp  Renderer2D.hpp  SFMLRenderer.hpp  SFMLWindow.hpp
VexEngine/include/Inputs/: InputHandler.hpp
VexEngine/include/Scenes/: Scene.hpp  SceneManager.hpp
VexEngine/include/Scenes/Components/: CameraComponent.hpp  CollisionComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
VexEngine/include/Scenes/ECS/: ComponentStorage.hpp  ComponentType.hpp  Entity.hpp  View.hpp  World.hpp
VexEngine/include/Scenes/Systems/: CameraSystem.hpp  CollisionSystem.hpp  ISystem.hpp  MovementSystem.hpp  RenderSystem.hpp
VexEngine/src/: Application.cpp
VexEngine/src/Assets/: Asset.cpp  AssetManager.cpp  AssetPathProvider.cpp  ImageLoader.cpp
VexEngine/src/Chronos/: FrameClock.cpp
VexEngine/src/Core/: Application.cpp
VexEngine/src/Core/ECS/: Entity.cpp  World.cpp
VexEngine/src/Core/Systems/: CameraSystem.cpp  CollisionSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
VexEngine/src/Graphics/: GraphicsFactory.cpp  Renderer2D.cpp  SFMLRenderer.cpp  SFMLWindow.cpp
VexEngine/src/Graphics/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
VexEngine/src/Inputs/: InputHandler.cpp
VexEngine/src/Scenes/: Scene.cpp  SceneManager.cpp
VexEngine/src/Scenes/ECS/: Entity.cpp  World.cpp
VexEngine/src/Scenes/Systems/: CameraSystem.cpp  CollisionSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
Vexxus/: CMakeLists.txt
Vexxus/include/: GameApplication.hpp
Vexxus/include/Scenes/: TestScene.hpp
Vexxus/include/Systems/: InputSystem.hpp
Vexxus/src/: GameApplication.cpp  Main.cpp
Vexxus/src/Scenes/: TestScene.cpp
Vexxus/src/Systems/: InputSystem.cpp
tools/: stage_resources.py
